Release 0.3 (in development)
============================

Release 0.2 (September 12, 2013)
================================

* Refactored Receipt class to use a class based model
* Added note field
* Enhanced version handling

  - Added __version_info__ tuple and switched to __version__
    for human readable form

Release 0.1 (November 02, 2012)
===============================

* First public release.