@@ -1,6 +1,8 @@
 Release 0.3 (in development)
 ============================
 
+* Switched to GExiv2
+
 Release 0.2 (September 12, 2013)
 ================================
 
